<resources>
    <string name="app_name">Resume</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Tyler Metiva</string>
    <string name="address">8424 Standish Rd.</string>
    <string name="city">Bentley, MI 48613</string>
    <string name="phone">(989) 233-7396</string>
    <string name="email">tpmetiv1@svsu.edu</string>
    <string name="education">EDUCATION</string>
    <string name="assofsci">Associate of Science</string>
    <string name="deltacoll">Delta College, University Center, MI</string>
    <string name="deltaGpa">GPA: 3.60</string>
    <string name="deltaGradDate">May 2013</string>
    <string name="bsCs">Bachelor of Science in Computer Science</string>
    <string name="svsu">Saginaw Valley State University, University Center, MI</string>
    <string name="svsuGpa">Current GPA: 3.72</string>
    <string name="relCourseWork">RELEVANT COURSE WORK</string>
    <string name="cplusplus">• C++ Programming</string>
    <string name="OS">• Operating Systems</string>
    <string name="DS">• Data Structures</string>
    <string name="DBS">• Database Systems</string>
    <string name="OOD">• Object Oriented Design</string>
    <string name="javaProg">• Java Programming</string>
    <string name="microNET">• .NET Programming</string>
    <string name="theoryOfComp">• Theory of Computation</string>
    <string name="anticGrad">Anticipated: May 2016</string>
    <string name="relExp">RELEVANT EXPERIENCE</string>
    <string name="heartsCard">Hearts Card Game Development</string>
    <string name="sagMI">Saginaw, MI</string>
    <string name="impHearts">• Implemented Hearts card game in C++</string>
    <string name="algDev">• Developed algorithms to simulate real world gameplay</string>
    <string name="progLog">• Programmed all back-end logic</string>
    <string name="nnmp">No Nonsense Media Player (NNMP)</string>
    <string name="sagMi2">Saginaw, MI</string>
    <string name="impJava">• Implemented fully functional media player in Java</string>
    <string name="utlAgile">• Utilized Agile methodologies in design process</string>
    <string name="decLib">• Quickly learned libraries required for audio decoding</string>
    <string name="techSkills">TECHNICAL SKILLS</string>
    <string name="progLang">Programming Languages:</string>
    <string name="lang">C, C++, Java, PHP, Python</string>
    <string name="apps">Applications:</string>
    <string name="appTxt">MS Visual Studio, NetBeans, Eclipse</string>
    <string name="OShead">Operating Systems:</string>
    <string name="OStext">UNIX, Windows</string>
    <string name="DBSHead">Database Systems:</string>
    <string name="DBSText">MySQL</string>
    <string name="workExp">WORK EXPERIENCE</string>
    <string name="it">ITS Student Employee</string>
    <string name="SVSUadd">Saginaw Valley State University, University Center, MI</string>
    <string name="it1">• Provided friendly technical assistance to faculty</string>
    <string name="it2">• Correct various problems with podium electronics</string>
    <string name="scan">Scanning Specialist</string>
    <string name="spartan">Spartan Nash, Standish, MI</string>
    <string name="scan1">• Maintained electronic database of item prices</string>
    <string name="scan2">• Assisted customers with pricing inquiries</string>
    <string name="activities">ACTIVITIES</string>
    <string name="vol1">Volunteer:</string>
    <string name="vol1Text">Delta College Mathematics Competition</string>
    <string name="vol2">Volunteer:</string>
    <string name="vol2Text">Private Mathematics Tutor</string>
    <string name="member">Member:</string>
    <string name="ieee">Institute of Electrical and Electronics Engineers</string>
    <string name="itsDate">July 2014 - Present</string>
    <string name="spartanDate">May 2009 - July 2014</string>
    <string name="heartsDate">Sept. 2013 - Dec. 2013</string>
    <string name="NNMPDate">Sept. 2015 - Present</string>
</resources>
