<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="fill_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/relExp"
        android:id="@+id/textView4"
        android:layout_marginTop="34dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/heartsCard"
        android:id="@+id/txtHeartts"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="15dp"
        android:paddingLeft="10dp"
        android:textStyle="bold"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sagMI"
        android:id="@+id/txtHeartsLoc"
        android:layout_below="@+id/txtHeartts"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="12sp"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/impHearts"
        android:id="@+id/txtHearts1"
        android:layout_below="@+id/txtHeartsLoc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="12sp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/algDev"
        android:id="@+id/txtHearts2"
        android:layout_below="@+id/txtHearts1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/progLog"
        android:id="@+id/txtHearts3"
        android:layout_below="@+id/txtHearts2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nnmp"
        android:id="@+id/txtNNMP"
        android:layout_below="@+id/txtHearts3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp"
        android:textStyle="bold"
        android:textSize="12sp"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sagMi2"
        android:id="@+id/txtNNMPLoc"
        android:layout_below="@+id/txtNNMP"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/impJava"
        android:id="@+id/txtNNMP1"
        android:layout_below="@+id/txtNNMPLoc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="12sp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/utlAgile"
        android:id="@+id/txtNNMP2"
        android:layout_below="@+id/txtNNMP1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/decLib"
        android:id="@+id/txtNNMP3"
        android:layout_below="@+id/txtNNMP2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/techSkills"
        android:id="@+id/txtTech"
        android:layout_below="@+id/txtNNMP3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:paddingLeft="10dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/progLang"
        android:id="@+id/txtLang"
        android:layout_below="@+id/txtTech"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="15dp"
        android:paddingLeft="10dp"
        android:textStyle="bold"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lang"
        android:id="@+id/txtProg"
        android:textSize="12sp"
        android:layout_alignBottom="@+id/txtLang"
        android:layout_alignRight="@+id/txtNNMP3"
        android:layout_alignEnd="@+id/txtNNMP3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/apps"
        android:id="@+id/txtApp"
        android:layout_below="@+id/txtProg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="12sp"
        android:paddingLeft="10dp"
        android:paddingTop="3dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/appTxt"
        android:id="@+id/txtAppEx"
        android:textSize="12sp"
        android:paddingTop="3dp"
        android:layout_above="@+id/txtOperating"
        android:layout_alignRight="@+id/txtNNMP1"
        android:layout_alignEnd="@+id/txtNNMP1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/OShead"
        android:id="@+id/txtOperating"
        android:layout_below="@+id/txtApp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:textSize="12sp"
        android:paddingTop="3dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/OStext"
        android:id="@+id/txtOSEx"
        android:textSize="12sp"
        android:layout_below="@+id/txtAppEx"
        android:layout_alignRight="@+id/txtNNMP"
        android:layout_alignEnd="@+id/txtNNMP"
        android:paddingTop="3dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/DBSHead"
        android:id="@+id/txtDatabase"
        android:layout_below="@+id/txtOperating"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="12sp"
        android:paddingLeft="10dp"
        android:paddingTop="3dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/DBSText"
        android:id="@+id/txtDBEx"
        android:layout_alignBottom="@+id/txtDatabase"
        android:layout_alignLeft="@+id/txtOSEx"
        android:layout_alignStart="@+id/txtOSEx"
        android:textSize="12sp" />

</RelativeLayout>
</ScrollView>