<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="fill_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/workExp"
        android:id="@+id/txtWorkExp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp"
        android:paddingLeft="10dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/it"
        android:id="@+id/txtITS"
        android:layout_below="@+id/txtWorkExp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:textStyle="bold"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/SVSUadd"
        android:id="@+id/txtITSLoc"
        android:layout_below="@+id/txtITS"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="12sp"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/it1"
        android:id="@+id/txtITS1"
        android:layout_below="@+id/txtITSLoc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/it2"
        android:id="@+id/txtITS2"
        android:layout_below="@+id/txtITS1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="12sp"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/scan"
        android:id="@+id/txtScan"
        android:layout_below="@+id/txtITS2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:paddingLeft="10dp"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/spartan"
        android:id="@+id/txtScanLoc"
        android:layout_below="@+id/txtScan"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/scan1"
        android:id="@+id/txtScan1"
        android:layout_below="@+id/txtScanLoc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="12sp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/scan2"
        android:id="@+id/txtScan2"
        android:layout_below="@+id/txtScan1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/activities"
        android:id="@+id/txtActivities"
        android:layout_below="@+id/txtScan2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:textStyle="bold"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/vol1"
        android:id="@+id/txtVol1"
        android:layout_below="@+id/txtActivities"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/vol1Text"
        android:id="@+id/txtVol1Ex"
        android:textSize="12sp"
        android:layout_alignBottom="@+id/txtVol1"
        android:layout_alignRight="@+id/txtITS2"
        android:layout_alignEnd="@+id/txtITS2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/vol2"
        android:id="@+id/txtVol2"
        android:layout_below="@+id/txtVol1Ex"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:paddingTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/vol2Text"
        android:id="@+id/txtVol2Ex"
        android:layout_alignBottom="@+id/txtVol2"
        android:layout_alignLeft="@+id/txtVol1Ex"
        android:layout_alignStart="@+id/txtVol1Ex"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/member"
        android:id="@+id/txtMember"
        android:layout_below="@+id/txtVol2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="12sp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ieee"
        android:id="@+id/txtMem1"
        android:textSize="12sp"
        android:layout_alignBottom="@+id/txtMember"
        android:layout_toRightOf="@+id/txtVol2"
        android:layout_toEndOf="@+id/txtVol2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/itsDate"
        android:id="@+id/txtITSDate"
        android:textSize="12sp"
        android:paddingRight="10dp"
        android:layout_above="@+id/txtITSLoc"
        android:layout_alignLeft="@+id/txtScanDate"
        android:layout_alignStart="@+id/txtScanDate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/spartanDate"
        android:id="@+id/txtScanDate"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/txtScan"
        android:layout_alignBottom="@+id/txtScan"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingRight="10dp" />

</RelativeLayout>
</ScrollView>